call for GET method and routing basics

--- a/app-for-react-ts/package.json
+++ b/app-for-react-ts/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^18.2.7",
     "babel-plugin-relay": "^15.0.0",
     "mini.css": "^3.0.1",
+    "modules": "^0.4.0",
+    "node": "^20.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
